--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -67,19 +67,22 @@ $main-font-color: #202123;
   .middle-nav {
     .container {
       justify-content: initial;
+      width: 95%;
+      border-bottom: 1px solid #d3d3d3;
+      padding: 0 1rem;
+      height: 100px;
       .logo {
         font-size: 3rem;
         color: #5d3fd3;
         white-space: nowrap;
+        margin-right: 10px;
       }
       .shop {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        margin: 0 15px;
+        width: 130px;
         span {
           color: #555555;
-          font-size: 1.2rem;
-          width: 45%;
+          width: 55%;
           white-space: normal;
           line-height: 16px;
           &:hover {
