--- a/src/components/Categories/categories.scss
+++ b/src/components/Categories/categories.scss
@@ -1,17 +1,88 @@
 .categories {
   .container {
     width: 95%;
+    display: block;
+    position: relative;
+
     ul {
+      list-style: none;
+      padding: 0;
+    }
+    .main-cats {
       display: flex;
       justify-content: space-between;
-      list-style: none;
       width: 100%;
       margin: 10px 0;
-      padding: 0;
       li {
-        cursor: pointer;
-        color: #202123;
+        margin: 0 5px;
+        h3 {
+          margin: 0;
+          color: #202123;
+          font-weight: 600;
+          transition: all 0.6s;
+        }
+        .dr-hover {
+          position: absolute;
+          left: 0;
+          top: 30px;
+          display: flex;
+          justify-content: space-around;
+          background-color: #fafafa;
+          border: 1px solid #d3d3d3;
+          width: 100%;
+          padding-block: 10px;
+          transition: visibility 0s, opacity 0.5s linear;
+          transition: all 500ms ease-out;
+          visibility: hidden;
+          opacity: 0;
+          .cat-list {
+            width: 25%;
+            h4 {
+              font-size: 1rem;
+              margin: 10px 0;
+            }
+            .line {
+              background-color: #d3d3d3;
+              width: 60%;
+              height: 2px;
+            }
+            ul {
+              li {
+                margin: 15px 0;
+                color: gray;
+                cursor: pointer;
+                &:hover {
+                  color: #202123;
+                  text-decoration: underline;
+                  transition: 0.1s;
+                }
+              }
+            }
+          }
+
+          .cat-img {
+            width: 65%;
+            height: 350px;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+        }
       }
+
+      & {
+        h3:hover + .dr-hover {
+          display: flex;
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+    }
+
+    .show {
+      display: flex;
     }
   }
 }
